<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#FAFAFA"
    android:orientation="vertical"
    tools:context="tz.com.MainActivity" >

    <!-- 蓝色标题栏 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#0099FF"
        android:gravity="center_vertical"
        android:orientation="horizontal" >

        <!-- 用户登录图标   实在没有图片了 随便找了一个替代 -->

        <ImageView
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:src="@drawable/hmv" />

        <!-- 动态 -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center"
            android:paddingBottom="5sp"
            android:paddingTop="5sp"
            android:text="@string/title"
            android:textSize="20sp" />

        <!-- 更多 -->

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="right"
            android:paddingBottom="5sp"
            android:paddingTop="5sp"
            android:text="@string/more"
            android:textSize="20sp" />
    </LinearLayout>

    <!-- 搜索框 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:orientation="vertical" >

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:background="#FFF"
            android:gravity="center"
            android:hint="@string/selfShot" />
    </LinearLayout>

    <!-- 好友动态  兴趣部落 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="5dp"
        android:background="#FFF"
        android:orientation="horizontal" >

        <!-- 好友动态 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/igs" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/friendsEmotion" />
        </LinearLayout>

        <!-- 附近 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/eqc" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/near" />
        </LinearLayout>

        <!-- 兴趣部落 -->

        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="vertical" >

            <ImageView
                android:layout_width="38dp"
                android:layout_height="38dp"
                android:src="@drawable/iei" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:gravity="center_horizontal"
                android:text="@string/interest" />
        </LinearLayout>
    </LinearLayout>

    <!-- 游戏 购物 应用宝 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFF"
        android:orientation="vertical" >

        <!-- 游戏 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/jyx" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/game" />
        </LinearLayout>

        <!-- 购物 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/jzb" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/shopping" />
        </LinearLayout>

        <!-- 应用宝 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
               android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/grf" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/appBaby" />
        </LinearLayout>
    </LinearLayout>

    <!-- 附近的群 吃喝玩乐 同城服务 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="#FFF"
        android:orientation="vertical" >

        <!-- 附近的群 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/geu" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/unitNear" />
        </LinearLayout>

        <!-- 吃喝玩乐 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/ktm" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/functional" />
        </LinearLayout>

        <!-- 同城服务 -->

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_weight="1"
            android:gravity="center_horizontal"
            android:orientation="horizontal" >

            <ImageView
                android:layout_width="20dp"
                android:layout_height="20dp"
                android:src="@drawable/khb" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginLeft="10dp"
                android:text="@string/cityService" />
        </LinearLayout>
    </LinearLayout>

    <!-- 底部导航 -->

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="100dp"
        android:background="#FFF"
        android:orientation="horizontal" >

        <!-- 消息 -->

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:src="@drawable/skin_tab_icon_conversation_selected" />

        <!-- 联系人 -->

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:src="@drawable/skin_tab_icon_contact_selected" />

        <!-- 动态 -->

        <ImageView
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:layout_weight="1"
            android:src="@drawable/skin_tab_icon_plugin_selected" />
    </LinearLayout>

</LinearLayout>